# blur-server

./: pyproject.toml
.env/: .env
app/: Dockerfile  Makefile  app.py  blur_faces.py  requirements.txt  upload.py
