[tool.poetry]
name = "blur-server"
version = "0.1.0"
description = ""
authors = ["Patryk Studziński <studzik21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
mediapipe = "^0.10.9"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.8"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
